  Properties that are read only by definition can no longer be made writeable
  Entities, constructor added with domainId parameter
  Property.DenormalizedViewProperty removed, implemented with DerivedProperty, some refactoring in related classes
  IntelliJ modules renamed to java 9 module names
  Trying out Gradle
  DefaultEntityConnectionServer now exits in case of an exception during domain model loading
  Some minor gradle related fixes
  EntityTableConditionModel.additionalTableConditionProvider renamed to additionalConditionProvider,additionalTableFilterCondition to additionalFilterCondition and getTableCondition() to getCondition()
  ResultPacker.fetch() added
  ResultIterator added
  LocalEntityConnection.iterator(EntityCondition) added
  LocalEntityConnections.createConnection() now returns LocalEntityConnection instead of EntityConnection
  Added a few run configurations to gradle build
  Improved server level handling of InvocationTargetException
  DefaultEntityEditModel.insert() now calls saveAll() on the entity before inserting to remove unnecessary original values
  Entities.PERFORM_NULL_VALIDATION configuration value removed, Entities.Validator constructor overloaded with parameter instead
  DefaultValueMap.saveAll() simplified, removeOriginalValue() removed redundant containsKey() call
  Removed sonarqube plugin from demo gradle projects
  Swing framework bundle module removed, wont jive with jigsaw since it exports the same packages as other modules, a big nono
  Some minor modue-info.java fixes
  common-tools module split from common-model, due to JFreeChart dependency
  swing-common-ui-tools module split from common-ui, same reason
  framework-tools module split from framework-model
  Rearranging modules due to java.desktop dependency
  module-info.java added to Swing modules
  Server monitor module moved to Swing directory
  Server monitor now uses gradle application plugin
  Module names no longer used as artifact names