@@ -1,0 +1,5 @@
+module org.jminor.swing.framework.tools.ui {
+  requires slf4j.api;
+  requires org.jminor.framework.tools;
+  exports org.jminor.swing.framework.tools.ui;
+}
