@@ -1,7 +1,7 @@
 /*
  * Copyright (c) 2004 - 2017, Björn Darri Sigurðsson. All Rights Reserved.
  */
-package org.jminor.swing.framework.model;
+package org.jminor.swing.framework.tools;
 
 import org.jminor.common.Event;
 import org.jminor.common.EventListener;
